# DigitalJournal

./: .gitignore  CMakeLists.txt  README.md  TestClass.cpp  main.cpp  resources.qrc
ControllerLayer/: AIHelper.cpp  AIHelper.h  Controller.cpp  Controller.h
ControllerLayer/CommandPattern/: AddCommand.h  Command.h  RemoveCommand.h  UpdateCommand.h
ControllerLayer/FilterStrategy/: AndFilterStrategy.h  FilterStrategy.h  OrFilterStrategy.h
RepositoryLayer/: CSVRepo.cpp  CSVRepo.h  DataEntry.cpp  DataEntry.h  JSONRepo.cpp  JSONRepo.h  Repository.h
UILayer/: EntryDialog.h  EntryWidget.h  MainWindow.cpp  MainWindow.h
